# emida

./: .gitignore  CMakeLists.txt  README.md  begins.txt  generator.py  gtest_external.cmake  recap.txt  test.py
.github/workflows/: CI.yml  CI20.yml
TEST_RUN/: def.txt  run.py
data/: 100_A.txt  150_A.txt  32_res.txt  5_B.txt  5_res.txt  64_res.txt  data_pic.txt
data/cross_corr/: 100_B.txt  100_res.txt  150_B.txt  150_res.txt  32_A.txt  32_B.txt  3_res.txt  5_A.txt  64_A.txt  64_B.txt
data/hann/: 3_A.txt  3_res.txt  5_A.txt
data/small_FeAl/DEFORMED_FeAl/: DEFORMED_x0y0.tif
data/small_FeAl/INITIAL_FeAl/: INITIAL_x0y0.tif
eval/: ROI-50-SIZE-50.json  batch-table.py  batch.py  cross-bar.py  cross-compare.py  cross-plot.py  cross-roi-count-scaled.py  cross-roi-count.py  float-double-compare.py  fourier-transform-size.py  load-plot-loadworkers.py  load-plot-table.py  load-plot.py  multiply-plot.py  multiply-sizes.py  out-graph-TOTAL-full-size-double.json  out-graph-TOTAL-full-size-float.json  out-graph-TOTAL.json  out-graph-batch-7-double.json  out-graph-batch-double.json  out-graph-batch-float.json  out-graph-brute-old.json  out-graph-compare-brute.json  out-graph-compare-fft.json  out-graph-float.json  out-graph-full-size.json  out-graph-load-tiff-double.json  out-graph-loadworkers-float.json  out-graph-multiply-test-double.json  out-graph-multiply-test-float.json  out-graph-python-impl.json  out-graph-roi-count.json  out-graph-sum-N-1.txt  out-graph-sum-N-10.txt  out-graph.json  python-impl-plot-abs.py  python-impl-plot-full-size.py  python-impl-plot-speedup.py  python-impl-plot.py  python-impl-table-full-size.py  (+6 more)
jove/: analyze.py  gen-cryst.py  gen-regular.py  hexplot.py  roi-cryst.txt  roi-regular.txt  run.py  show-roi.py  tools.py  viewer.py
multiply_test/: multiply_test.cpp
option/: option.h
python/: A_gen.py  cross_corr_gen.py  fft.py  generator.py  get_offset_gen.py  hann_gen.py  mat_gen.py  process_offsets.py  rescale_input.py  subpixel_max.py  subpixel_max_coef.py  test.py
single_run/: compare-res.py  copy_test_rect.py  roi-regular.txt  run.py  sim.py
src/: args_parser.cpp  args_parser.hpp  common.h  common.hpp  concurrent_queue.hpp  cross_corr.cu  cross_corr.hpp  cross_corr_host.hpp  cufft_helpers.hpp  device_helpers.hpp  draw_tiff.hpp  extract_neighbors.cu  get_offset.hpp  gpu_offset.hpp  hadamard.cu  hanning.cu  hanning_host.hpp  host_helpers.hpp  kernels.cuh  load_tiff.hpp  main.cpp  matrix.hpp  maxarg.cu  maxarg.hpp  maxarg_host.hpp  multiply_test.cpp  prepare_pics.cu  process_files.hpp  slice_picture.hpp  stopwatch.hpp  subpixel_max.cpp  subpixel_max.hpp  subtract_mean.hpp  sum.cu
test/: cross_corr_fft_test.cpp  cross_corr_opt_test.cpp  cross_corr_test.cpp  double_compare.hpp  get_offset_test.cpp  hanning_test.cpp  load_tiff_test.cpp  maxarg_test.cpp  prepare_test.cpp  slice_picture_test.cpp  stringer.hpp  subpixel_max_test.cpp  subtract_mean_test.cpp  sum_test.cpp  sums_serial.hpp  test.cpp
test/res/: INITIAL_x0y0.tif  data_temp.txt
test/res/hann/: 128_A.txt  128_res.txt  5_res.txt
thesis/: .gitignore  bibliography.bib  bibliography.tex  chap01.tex  chap02.tex  chap03.tex  chap04.tex  epilog.tex  macros.tex  pdfa.xmpi  preface.tex  thesis.blg  thesis.tex  title.tex  userguide.tex
thesis/img/: line.py  normalized_corr.py  shapes_correlation.py  subcompare.py  surface3d_demo.py
